--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "multer-s3": "^2.10.0",
     "mysql2": "^3.1.0",
     "path": "^0.12.7",
+    "redis": "^4.6.4",
     "sequelize": "^6.28.0",
     "socket.io": "^4.5.4"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "jest": "^29.4.1",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.6.0",
